# diesel

./: .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  tailwind.config.js
public/: extra.css
src/: configuration.rs  main.rs
src/css/: tailwind.css
src/hook/: mod.rs  use_interval.rs  use_save.rs  use_shared_state.rs
src/lang/: ast.rs  grammar.lalrpop  mod.rs
src/ql/: ast.rs  grammar.lalrpop  mod.rs
src/schedule/: event.rs  mod.rs
src/ui/: mod.rs  theme.rs
src/ui/component/: calendar.rs  grid_cell.rs  layout.rs  mod.rs  modal.rs  navbar.rs  settings.rs  svg.rs  theme_controller.rs
src/ui/view/: calendar.rs  event.rs  index.rs  mod.rs  setup.rs
src/ui/widget/: drawer.rs  mod.rs  size.rs  time.rs  upcoming.rs  weather.rs
