[package]
name = "diesel"
authors = ["Amit Bashan <amitba@netanya.ac.il>"]
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus" }
gloo = { version = "*", features = ["futures", "timers"] }
chrono = "*"
lalrpop-util = { version = "*", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "*"
