[package]
name = "diesel"
repository = "https://github.com/amitbashan/diesel"
authors = ["Amit Bashan <amitba@netanya.ac.il>"]
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus" }
chrono = { version = "*", features = ["serde"] }
lalrpop-util = { version = "*", features = ["lexer", "unicode"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dirs = "*"
async-timers = "*"
log = "*"
dioxus-logger = "*"

[build-dependencies]
lalrpop = "*"
