[package]
name = "diesel"
repository = "https://github.com/amitbashan/diesel"
authors = ["Amit Bashan <amitba@netanya.ac.il>"]
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus" }
chrono = { version = "*", features = ["serde"] }
chrono-tz = "*"
lalrpop-util = { version = "*", features = ["lexer", "unicode"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dirs = "*"
strum = { version = "*", features = ["derive"] }
async-timers = "*"
open-meteo-rs = { git = "https://github.com/angelodlfrtr/open-meteo-rs" }
log = "*"
dioxus-logger = "*"

[build-dependencies]
lalrpop = "*"
